--- a/src/styles/pages/profile-page.scss
+++ b/src/styles/pages/profile-page.scss
@@ -1,81 +1,106 @@
 @import '../_variables';
 
 .profile-page {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 2rem;
-    background-color: $background-dark;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: $padding-standard;
+  background-color: $background-black;
+  border-radius: $border-radius;
+  color: $white-color;
+
+  h1 {
+    font-size: $font-size-h2;
+    text-align: center;
+    margin-bottom: $margin-large;
+  }
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    gap: $gap-large;
+    padding: $padding-large;
+    background-color: $background-black;
     border-radius: $border-radius;
-    color: $white-color;
-  
-    h1 {
-      font-size: $font-size-h2;
+  }
+
+  &__field {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: $padding-small;
+
+    label {
+      font-weight: bold;
+      font-size: $font-size-body;
+      flex-basis: 30%;
+    }
+
+    span, input {
+      flex-basis: 70%;
+      padding: $padding-small;
+      border: 1px solid $border-color;
+      border-radius: $border-radius;
+      background-color: $background-graphite;
+      color: $white-color;
+      font-size: $font-size-body;
+    }
+
+    input {
+      outline: none;
+    }
+  }
+
+  &__actions {
+    display: flex;
+    flex-direction: column; 
+    width: 100%;       
+    gap: $gap-medium;
+    padding-top: $padding-small;
+
+    .btn {
+      padding: $padding-small $padding-standard;
+      border-radius: $border-radius;
+      font-size: $font-size-body;
+      border: none;
       text-align: center;
-      margin-bottom: 2rem;
-    }
-  
-    &__container {
-      display: flex;
-      flex-direction: column;
-      gap: 1.5rem;
-    }
-  
-    &__field {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-  
-      label {
-        font-weight: bold;
-        flex-basis: 30%;
-      }
-  
-      span {
-        flex-basis: 70%;
-      }
-  
-      input {
-        flex-basis: 70%;
-        padding: 0.5rem;
-        border: 1px solid $border-color;
-        border-radius: $border-radius;
-        background-color: $background-black;
+
+      &.btn-primary {
+        background-color: $primary-color;
         color: $white-color;
       }
-    }
-  
-    &__actions {
-      display: flex;
-      justify-content: space-between;
-      gap: 1rem;
-  
-      .btn {
-        flex: 1;
-        padding: 0.75rem;
-        border: none;
-        border-radius: $border-radius;
-        font-size: $font-size-body;
-        cursor: pointer;
-  
-        &.btn-primary {
-          background-color: $primary-color;
-          color: $white-color;
-        }
-  
-        &.btn-secondary {
-          background-color: $background-graphite;
-          color: $white-color;
-        }
-  
-        &.btn-danger {
-          background-color: $error-color;
-          color: $white-color;
-        }
-  
+
+      &.btn-secondary {
+        background-color: $background-graphite;
+        color: $white-color;
+
         &:hover {
           opacity: 0.9;
         }
       }
     }
   }
-  
+
+  .btn-secondary {
+    cursor: pointer;
+  }
+
+  .logout-button {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: $margin-large;
+    padding-right: $padding-large;
+
+    .btn {
+      padding: $padding-small $padding-standard;
+      background-color: $background-graphite;
+      color: $white-color;
+      border-radius: $border-radius;
+      cursor: pointer;
+      font-size: $font-size-body;
+
+      &:hover {
+        opacity: 0.9;
+      }
+    }
+  }
+}
