--- a/src/styles/sections/user-controls.scss
+++ b/src/styles/sections/user-controls.scss
@@ -10,6 +10,12 @@
   top: 0;
   z-index: 100;
 
+  &__left {
+    display: flex;
+    align-items: center;
+    gap: $gap-medium; // Space between UserBadge and CartButton
+  }
+
   &__actions {
     display: flex;
     align-items: center;
