--- a/src/styles/sections/user-controls.scss
+++ b/src/styles/sections/user-controls.scss
@@ -6,7 +6,7 @@
   justify-content: space-between;
   padding: $padding-standard $padding-large;
   background-color: $background-black;
-  position: sticky;
+  // position: sticky;
   top: 0;
   z-index: 100;
 
