--- a/src/styles/sections/layout.scss
+++ b/src/styles/sections/layout.scss
@@ -3,21 +3,19 @@
 .layout {
   display: flex;
   flex-direction: column;
-  height: 100vh; /* Full viewport height */
+  height: 100vh;
   width: 100%;
 
-  /* Content Section */
   .content-section {
-    flex-grow: 1; /* Allow content to expand */
+    flex-grow: 1;
     background-color: $background-black;
-    overflow-y: auto; /* Enable scrolling for content */
-    margin-top: 0; /* Default for desktop */
+    overflow-y: auto;
+    margin-top: 0;
     margin-left: $sidebar-width;
 
-    /* Add margin on mobile */
     @media (max-width: 768px) {
-      margin-top: 60px; /* Match the height of the navbar */
-      margin-left: auto
+      margin-top: 82px;
+      margin-left: 0;
     }
   }
 }
