--- a/src/styles/sections/user-controls.scss
+++ b/src/styles/sections/user-controls.scss
@@ -6,14 +6,14 @@
   justify-content: space-between;
   padding: $padding-standard $padding-large;
   background-color: $background-black;
-  // position: sticky;
+  position: sticky;
   top: 0;
   z-index: 100;
 
   &__left {
     display: flex;
     align-items: center;
-    gap: $gap-medium; // Space between UserBadge and CartButton
+    gap: $gap-medium; 
   }
 
   &__actions {
