--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -1,81 +1,33 @@
 @import '../_variables';
 
 .card {
-  width: 200px;
-  border-radius: $border-radius;
-  overflow: hidden;
-  background-color: $background-dark;
-  color: $white-color;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  text-align: center;
-  box-shadow: 0 4px 6px $shadow-color;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-
-  &:hover {
-    transform: scale(1.05);
-    box-shadow: 0 6px 12px $shadow-color;
-  }
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  background-color: $background-dark;
+  border-radius: $border-radius;
+  overflow: hidden;
 
   .card-image {
     width: 100%;
-    height: 300px;
+    aspect-ratio: 2 / 3;
     object-fit: cover;
     border-bottom: 2px solid $primary-color;
   }
 
   .card-content {
+    flex-grow: 1;
     padding: $padding-standard;
     display: flex;
     flex-direction: column;
-    gap: $padding-small;
-  }
-
-  .card-title {
-    font-size: $font-size-base;
-    font-weight: bold;
-    margin: $margin-small 0;
-  }
-
-  .card-genres {
-    font-size: $font-size-small;
-    color: $text-muted;
+    gap: $gap-small;
   }
 
   .card-actions {
     display: flex;
     justify-content: space-between;
-    gap: $gap-small;
-    margin-top: $margin-small;
-    width: 100%;
-    padding: 0 $padding-small;
-  }
-
-  &--loading {
-    .card-skeleton-image {
-      width: 100%;
-      height: 300px;
-      background: linear-gradient(-90deg, $background-dark 0%, $background-graphite 50%, $background-dark 100%);
-      animation: shimmer 1.5s infinite;
-    }
-
-    .card-skeleton-title {
-      width: 80%;
-      height: 20px;
-      margin: $margin-standard 0;
-      background: linear-gradient(-90deg, $background-dark 0%, $background-graphite 50%, $background-dark 100%);
-      background-size: 400% 400%;
-      animation: shimmer 1.5s infinite;
-    }
-  }
-}
-
-@keyframes shimmer {
-  0% {
-    background-position: 0% 0%;
-  }
-  100% {
-    background-position: -135% 0%;
+    padding: $padding-small;
   }
 }
