--- a/src/styles/sections/movies-list.scss
+++ b/src/styles/sections/movies-list.scss
@@ -2,26 +2,21 @@
 
 .movies-list {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
   gap: $padding-standard;
+  grid-template-columns: repeat(5, minmax(200px, 1fr));
+  grid-auto-rows: minmax(auto, max-content);
 
-
-  @media (max-width: 1200px) {
-    grid-template-columns: repeat(4, 1fr);
+  @media (max-width: 1399px) {
+    grid-template-columns: repeat(4, minmax(200px, 1fr));
   }
 
-  @media (max-width: 900px) {
-    grid-template-columns: repeat(2, 1fr);
+  @media (max-width: 1000px) {
+    grid-template-columns: repeat(2, minmax(200px, 1fr));
   }
 
   @media (max-width: 600px) {
     grid-template-columns: 1fr;
   }
-}
 
-.movies-list-empty {
-  text-align: center;
-  font-size: $font-size-base;
-  color: $text-muted;
-  margin: $margin-large;
+  align-items: start;
 }
