--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -3,31 +3,66 @@
 .card {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  width: 100%;
-  height: 100%;
+  height: 100%; // Ensure all cards are the same height
   background-color: $background-dark;
   border-radius: $border-radius;
   overflow: hidden;
+  box-shadow: 0 4px 8px $shadow-color;
+  position: relative;
 
-  .card-image {
-    width: 100%;
-    aspect-ratio: 2 / 3;
-    object-fit: cover;
-    border-bottom: 2px solid $primary-color;
+  .card-poster {
+    position: relative;
+
+    .card-image {
+      width: 100%;
+      aspect-ratio: 2 / 3;
+      object-fit: cover;
+      display: block;
+    }
+
+    .card-hover-actions {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      opacity: 0; // Initially hidden
+      transition: opacity 0.3s ease;
+      z-index: 2;
+
+      .button {
+        width: auto; // Ensure the button adapts to its content
+        height: auto; // Avoid overriding the button's height
+      }
+    }
+
+    &:hover .card-hover-actions {
+      opacity: 1; // Show button on hover
+    }
   }
 
   .card-content {
-    flex-grow: 1;
-    padding: $padding-standard;
+    flex-grow: 1; // Ensure the content takes up available space
+    padding: $padding-small;
     display: flex;
     flex-direction: column;
     gap: $gap-small;
+
+    .card-title {
+      font-size: $font-size-large;
+      color: $white-color;
+      margin: 0;
+    }
+
+    .card-genres {
+      font-size: $font-size-small;
+      color: $text-muted;
+    }
   }
 
   .card-actions {
     display: flex;
-    justify-content: space-between;
+    gap: $gap-small;
+    justify-content: flex-end;
     padding: $padding-small;
   }
 }
