--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -1,23 +1,28 @@
-@import '../_variables';
+@import '@/styles/_variables';
 
 .card {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%; // Ensure all cards take up the same height in the grid
   display: flex;
   flex-direction: column;
-  height: 100%; // Ensure all cards are the same height
-  background-color: $background-dark;
-  border-radius: $border-radius;
-  overflow: hidden;
-  box-shadow: 0 4px 8px $shadow-color;
-  position: relative;
+  justify-content: space-between; // Distribute content evenly
+  border: 1px solid transparent;
+  transition: transform 0.2s ease;
+
+  &:hover {
+    transform: translateY(-5px); // Add elevation effect
+    border-color: transparent; // Remove border on hover
+  }
 
   .card-poster {
     position: relative;
 
     .card-image {
       width: 100%;
-      aspect-ratio: 2 / 3;
+      height: auto;
       object-fit: cover;
-      display: block;
     }
 
     .card-hover-actions {
@@ -25,44 +30,28 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      opacity: 0; // Initially hidden
+      opacity: 0;
       transition: opacity 0.3s ease;
       z-index: 2;
 
-      .button {
-        width: auto; // Ensure the button adapts to its content
-        height: auto; // Avoid overriding the button's height
+      &:hover {
+        opacity: 1;
       }
-    }
-
-    &:hover .card-hover-actions {
-      opacity: 1; // Show button on hover
     }
   }
 
+  &:hover .card-hover-actions {
+    opacity: 1;
+  }
+
   .card-content {
-    flex-grow: 1; // Ensure the content takes up available space
     padding: $padding-small;
-    display: flex;
-    flex-direction: column;
-    gap: $gap-small;
-
-    .card-title {
-      font-size: $font-size-large;
-      color: $white-color;
-      margin: 0;
-    }
-
-    .card-genres {
-      font-size: $font-size-small;
-      color: $text-muted;
-    }
+    flex-grow: 1; // Ensure content stretches to fill remaining space
   }
 
   .card-actions {
     display: flex;
-    gap: $gap-small;
-    justify-content: flex-end;
+    justify-content: space-between;
     padding: $padding-small;
   }
 }
