--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -1,57 +1,79 @@
-@import '@/styles/_variables';
+@import '../_variables';
 
 .card {
   position: relative;
   overflow: hidden;
   width: 100%;
-  height: 100%; // Ensure all cards take up the same height in the grid
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between; // Distribute content evenly
+  justify-content: space-between;
   border: 1px solid transparent;
   transition: transform 0.2s ease;
 
   &:hover {
-    transform: translateY(-5px); // Add elevation effect
-    border-color: transparent; // Remove border on hover
+    transform: translateY(-5px);
   }
 
-  .card-poster {
-    position: relative;
+  .card-clickable-area {
+    text-decoration: none;
+    color: inherit;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 
-    .card-image {
-      width: 100%;
-      height: auto;
-      object-fit: cover;
-    }
+    .card-poster {
+      position: relative;
 
-    .card-hover-actions {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      opacity: 0;
-      transition: opacity 0.3s ease;
-      z-index: 2;
-
-      &:hover {
-        opacity: 1;
+      .card-image {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
       }
     }
-  }
 
-  &:hover .card-hover-actions {
-    opacity: 1;
-  }
+    .card-content {
+      padding: $space-small;
+      flex-grow: 1;
 
-  .card-content {
-    padding: $padding-small;
-    flex-grow: 1; // Ensure content stretches to fill remaining space
+      .card-title {
+        font-size: $font-size-large;
+        color: $text-color-white;
+        margin: 0;
+      }
+
+      .card-genres {
+        font-size: $font-size-small;
+        color: $text-muted-color;
+        margin-top: $space-small;
+      }
+    }
   }
 
   .card-actions {
     display: flex;
     justify-content: space-between;
-    padding: $padding-small;
+    align-items: center;
+    padding: $space-small;
+    background-color: transparent; // Match the card background
+    border-top: 1px solid rgba(255, 255, 255, 0.1); // Optional subtle separator for clarity
+
+    .button {
+      margin-right: $space-small;
+    }
+  }
+
+  .card-hover-actions {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    z-index: 3;
+
+    &:hover {
+      opacity: 1;
+    }
   }
 }
